--- a/main.css
+++ b/main.css
@@ -1,8 +1,9 @@
 body {
   text-align: center;
   font-family: "Trebuchet MS", sans-serif;
+  background-color: #f53;
 }
 
 h1,h2 {
-  color: ;
+  color: #ff5;
 }
